--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,19 +25,23 @@
         android:theme="@style/Theme.RecycleApp"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activities.sign.SignUpActivity"
-            android:exported="false"
+            android:name=".ui.activities.LoginActivity"
+            android:exported="true"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.RecycleApp">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
+        <activity
+            android:name=".ui.activities.SignUpActivity"
+            android:exported="true"
             android:label="@string/title_activity_sign_up"
             android:theme="@style/Theme.RecycleApp" />
-        <activity
-            android:name=".ui.activities.home.HomeActivity"
-            android:exported="false"
-            android:label="@string/title_activity_home"
-            android:theme="@style/Theme.RecycleApp" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -59,12 +63,8 @@
         <activity
             android:name=".ui.activities.MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.activities.ChatActivity"
             android:exported="true" />
